# cppcodingtest

./: CMakeLists.txt  README.md  datachecker.h
src/Five_week/: 10250.cpp  1074.cpp  11279.cpp  1202.cpp  12100.cpp  1231241413.cpp  13144.cpp  14469.cpp  14888.cpp  14889.cpp  15662.cpp  15683.cpp  15685.cpp  1644.cpp  1700.cpp  17143.cpp  17144.cpp  17219.cpp  17406.cpp  1764.cpp  1781.cpp  17822.cpp  17825.cpp  1911.cpp  1912.cpp  1927.cpp  1931.cpp  1978.cpp  2109.cpp  2170.cpp  2579.cpp  2632.cpp  3190.cpp  3273.cpp  9935.cpp
src/Four_theory/: bitdrop.cpp  sulgame.cpp
src/Four_week/: 1062.cpp  1094.cpp  11723.cpp  1285.cpp  13244.cpp  14391.cpp  14405.cpp  14890.cpp  15296.cpp  15353.cpp  17471.cpp  1987.cpp  19942.cpp  2234.cpp  3015.cpp  5430.cpp
src/Seven_theory/: 123.cpp  dp1.cpp  fibona.cpp
src/Seven_week/: 10942.cpp  1103.cpp  12852.cpp  12865.cpp  1344.cpp  1450.cpp  1480.cpp  14863.cpp  14867.cpp  1509.cpp  1513.cpp  1535.cpp  16235.cpp  17070.cpp  17136.cpp  17837.cpp  2098.cpp  2240.cpp  2293.cpp  2294.cpp  2342.cpp  3687.cpp  4781.cpp  4811.cpp  5557.cpp
src/Six_theory/: 1.cpp
src/Six_week/: 1072.cpp  11053.cpp  11444.cpp  11660.cpp  11725.cpp  1269.cpp  14002.cpp  14003.cpp  14627.cpp  1561.cpp  15666.cpp  16434.cpp  16953.cpp  2343.cpp  2565.cpp  2670.cpp  2776.cpp  2792.cpp  6236.cpp  7795.cpp  9663.cpp
src/Three_theory/: 2400.cpp
src/Three_week/: 1189.cpp  12851.cpp  12869.cpp  13913.cpp  14497.cpp  14620.cpp  15684.cpp  15686.cpp  16234.cpp  16637.cpp  17071.cpp  17071re.cpp  1987.cpp  2529.cpp  2589.cpp  3197.cpp  4179.cpp  9934.cpp
(+49 files in other folders)
